...
                    }

                    Spacer(Modifier.height(16.dp))

                    Button(
                        onClick = { showAccountDeletionDialog = true },
                        modifier = Modifier.testTag("DeleteAccountButton1"),
                        colors =
                            ButtonDefaults.buttonColors(
                                containerColor = MaterialTheme.colorScheme.error,
                                contentColor = MaterialTheme.colorScheme.onError,
                            ),
                    ) {
...
            password = password,
            onPasswordChange = { password = it },
        )

        Button(
            onClick = { onDeleteAccount(password) },
            Modifier.fillMaxWidth().testTag("DeleteAccountButton2"),
            colors =
                ButtonDefaults.buttonColors(
                    containerColor = MaterialTheme.colorScheme.error,
                    contentColor = MaterialTheme.colorScheme.onError,
                ),
        ) {
...
