...
        modifier = Modifier.testTag("ConfirmationDialog"),
        text = { Text(text) },
        onDismissRequest = onDismiss,
        confirmButton = {
            TextButton(
                onConfirm,
                modifier = Modifier.testTag("ConfirmDialogButton"),
            ) {
                Text(confirmText, color = MaterialTheme.colorScheme.error)
            }
        },
        dismissButton = {
            TextButton(
...
