...
        verticalArrangement = Arrangement.Center,
    ) {
        GitFitLogo()

        if (loading) {
            CircularProgressIndicator(
                Modifier.testTag("AuthProgressIndicator"),
            )
        }

        Card(
            modifier = Modifier.sizeIn(maxWidth = 512.dp),
        ) {
...
